updates JEI deprecation